--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 use_frameworks!
 
 platform :ios, '8.0'
-
+source 'https://github.com/CocoaPods/Specs.git'
 target 'HQYNetWorking_Example' do
   pod 'HQYNetWorking', :path => '../'
 
